2005-02-09  Sebastien Bacher  <seb128@debian.org>

	* NEWS:
	* configure.in: updated for the 2.9.91 release.

2005-02-06  Sergey V. Udaltsov <svu@gnome.org>

	* schemas/desktop_gnome_peripherals_keyboard_xkb.schemas.in,
	gnome-settings-daemon/gnome-settings-keyboard-xkb.c,
	gnome-settings-daemon/modmap-dialog.glade: providing ability to
	suppress the "x sysconfig changed" warning message, fixing #150435

2005-02-03  Leena Gunda  <leena.gunda@wipro.com>

	* configure.in: Check for screensaver functionality in libXext.so
	also when deciding to build typing-break. Fixes bug #155461.

2004-12-27  Sergey V. Udaltsov <svu@gnome.org>

	* schemas/desktop_gnome_peripherals_keyboard_xkb.schemas.in:
	Changing the default value for "handleIndicators" to false, 
	as requested in #161343

2004-12-20  Sebastien Bacher  <seb128@debian.org>

	* configure.in: post release bump to 2.9.5.

==================== 2.9.4 ====================

2004-12-20  Sebastien Bacher  <seb128@debian.org>

	* configure.in: Version 2.9.4.

2005-01-10  Pawan Chitrakar  <pawan@nplinux.org>

	* configure.in: Added ne "Nepali" in ALL_LINGUAS

2005-01-04  Shakti Sen <shprasad@novell.com>

	* configure.in: Defined PREFIX to <prefix> 
	bug #153203
	
2005-01-03  Dan Winship  <danw@novell.com>

	* configure.in: Remove redundant check for ngettext, since
	AM_GLIB_GNU_GETTEXT already checks for it (in both libc and
	libintl)._

2005-01-03  Sebastien Bacher  <seb128@debian.org>

	* libkbdraw/Makefile.am: 
	patch from Marco Pesenti Gritti <marco@gnome.org> 
	to fix the build out of the source dir (Closes: #158333).

2004-12-31  Sergey V. Udaltsov <svu@gnome.org>

	* configure.in: Bump libxklavier requirement to 1.14

2004-12-20  Sebastien Bacher  <seb128@debian.org>

	* configure.in: post release bump to 2.9.4.

Mon Dec 20 16:52:47 2004  Jonathan Blandford  <jrb@redhat.com>

	* configure.in: release 2.9.3

2004-12-13  Dwayne Bailey  <dwayne@translate.org.za>

	* configure.in: Added "zu" to ALL_LINGUAS.
