@@ -14,7 +14,4 @@ endif
 SUBDIRS =  $(always_built_SUBDIRS) $(randr_SUBDIRS)
 
 DIST_SUBDIRS = \
-	$(always_built_SUBDIRS) display
-
-
-
+	$(always_built_SUBDIRS) display about-me
