@@ -496,6 +496,7 @@ libwindow-settings/gnome-window-settings-2.0.pc
 libgswitchit/Makefile
 libkbdraw/Makefile
 capplets/Makefile
+capplets/about-me/Makefile
 capplets/common/Makefile
 capplets/default-applications/Makefile
 capplets/background/Makefile
