@@ -1,5 +1,12 @@
 2005-02-09  Sebastien Bacher  <seb128@debian.org>
 
+	* configure.in:
+	* capplets/Makefile.am:
+	include the "about-me" capplet files to the tarball to fix the tarball
+	build.
+
+2005-02-09  Sebastien Bacher  <seb128@debian.org>
+
 	* NEWS:
 	* configure.in: updated for the 2.9.91 release.
 
